# weasel

./: .clang-format  .gitignore  CMakeLists.txt  main.cpp  readme.md
benchmarks/: timer.benchmark.cpp
docs/: ideas.md  main.tex  test.md  weasel.md
docs/ast/: AstNode.h  BinaryExpr.cpp  ErrorExpr.cpp  ErrorExpr.h  IdentifierExpr.cpp  IdentifierExpr.h  ImplicitCastExpr.cpp  ImplicitCastExpr.h  NumberExpr.cpp  NumberExpr.h  RepStmt.cpp  RepStmt.h  RunStmt.cpp  RunStmt.h  Stmt.h  TypeInfo.h
docs/grammar/: GrammarTypes.h
docs/lexer/: Lexer.cpp  Lexer.h
libs/: ConsoleUtfScope.h
res/: bubble-sort.wes  data.txt  file.wesbc  grammar.txt  grammar.wesg  grammar.wesg.cache  grammar.wesg.ch  log.txt  main.tex  main.wes  sieve-of-eratosthenes.wes
res/docs/: array.md  class.md  cli.md  functions.md  if.md  info.md  loops.md  modules.md  operations-and-expressions.md  stdlib.md  types.md  variables.md  when-enum.md  wkit.md
res/examples/: bubble-sort.wes  bubble-sort.wesbc  c.c  data.wes  data.wesbc  img-filter.wes  jump.wes  math.wesbc  native.wes  par-img-filter.wes  resl-lalr.txt  sieve-of-eratosthenes.wes  simple.wes  struct.wes  task-1.txt  task-2.txt  task-3.txt  task-4.txt  task-lalr.txt  text-5.txt
res/lab/: LAB.md  expected_output.txt  intset_test.wes
res/slides/: doc.docx
res/stdlib/: list.wes  map.wes  queue.wes  stack.wes
res/tests/: array.wes  break-continue.wes  bubblesort.wes  classes.wes  default-params.wes  example.wes  functions.wes  if.wes  loop.wes  matrix.wes  operations-and-expressions.wes  overloading.wes  params.wes  repeat.wes  return-check.wes  run.wes  stdlib.wes  types.wes  wgen-rep.wes  when-enum.wes
src/: main.cpp  vm_main.cpp
src/ast/: BinaryExpr.h  Expr.cpp  Expr.h  IAstVisitor.h
src/cacher/: FileCache.cpp  FileCache.h
src/cli/: CommandLineParser.cpp  CommandLineParser.h  ConsoleEncoding.cpp  (+2 more)
tests/: EmptyRulesDeleter.test.cpp  LongRulesSplitter.test.cpp  ProductiveRulesFilter.test.cpp  ReachableRulesFilter.test.cpp  TerminalsIsolator.test.cpp  UnitRulesDeleter.test.cpp  cst.test.cpp  lexer.test.cpp  parser.test.cpp  timer.test.cpp
(+329 files in other folders)
